Work on workflow files, errors, rearrange

--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -1041,6 +1041,8 @@ If everything looks right to you there, you can copy and paste the text under "R
 
 ---
 
+<!-- Gone -->
+
 If a screen loaded with an error message, ALKiln will try to reload a few times, and will try to log the error message that it saw:
 
 ```
